--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </li>
 
             </li> 
-            <li><span>June 2021 – July 2022</span><br>Senior Software Engineer<br>Infosys Limited, Hyderabad, India | <em>Node.js, OpenText Documentum</em>
+            <li><span>June 2021 – July 2022</span><br>Senior Systems Engineer[DevOps/Developer Engineer]<br>Infosys Limited, Hyderabad, India | <em>Node.js, OpenText Documentum</em>
                 <p class="p12">
                     • Built and deployed a modular Document Management System using Node.js and Docker.<br>
                     • Integrated OpenText Documentum with AWS S3 for scalable document storage.<br>
@@ -100,7 +100,7 @@
                 </p>
             </li>
             
-            <li><span>December 2019 – May 2021</span><br>Software Engineer<br>Infosys Limited, Hyderabad, India | <em>OpenText Documentum, Python, Flask</em>
+            <li><span>December 2019 – May 2021</span><br>Software EngineerDevOps/Developer Engineer]<br>Infosys Limited, Hyderabad, India | <em>OpenText Documentum, Python, Flask</em>
                 <p class="p12">
                     • Utilized OpenText Cloud API Documentum for managing 64+ repositories.<br>
                     • Automated job scheduling with Python scripts, reducing manual intervention by 70%.<br>
